fix(contract): build the negotiation on the contract that is actually registered
There are two InteractionWiredContract hierarchies in this tree. The one under
wired/chest is dead -- nothing imports it, ItemManager registers nothing from it.
The live contracts are wired/contract, registered as wf_contract_payment,
wf_contract_reward, wf_contract_trade and wf_xtra_custom_contract, and that is
what InitTransaction reads. The previous three commits were built on the dead
one, which surfaced only when wiring InitTransaction found an API that did not
match.

So the grammar moves to the live contract, which turns out to be a better home:
it persists as JSON, so the alternatives live in that payload and the marker and
int-param tail invented to avoid breaking existing contracts are gone entirely.
A payload written before today has no rules field and its flat terms read back as
a single alternative -- what they always meant -- and the flat list is still
written alongside the grammar so an older jar reading this payload finds a
contract rather than an empty one.

Terms gain furni alongside currency, which the live model called a future
extension and the official element editor has always had. `kind` defaults to
currency, so a term saved without it reads correctly.

The session, the requirement judge, the settlement and the seven packets carried
over unchanged in substance: they were written against the shape of a term, not
against where it was stored.